Functional messaging system.

--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -24,6 +24,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <title>React App</title>
   </head>
   <body>
@@ -40,4 +42,20 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <footer class="text-center pt-3">
+      <p class="d-flex flex-row justify-content-center">
+          <a class="hovering" href="https://medium.com/@ryan.dines" target="_top">Brought to you with<span class="fa fa-heart crimson pl-1"></span> by Ryan Dines</a>
+      </p>
+  </footer>
 </html>
+<style>
+  .crimson{
+    color:crimson;
+    text-decoration: none !important;
+    padding: 10px 0;
+  }
+  a:hover{
+    text-decoration: none !important;
+    color:2464c9;
+  }
+</style>
